# pdf-ocr-guiapp

./: README.md  gui-app.py  pyproject.toml
