[project]
name = "pdf-ocr-guiapp"
version = "0.1.0"
description = "GUI App for pdf ocr (development)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pdf2image>=1.17.0",
    "pypdf2>=3.0.1",
    "pysimplegui>=5.0.7",
    "pytesseract>=0.3.13",
    "reportlab>=4.2.5",
    "tkeasygui>=1.0.11",
    "tqdm>=4.67.1",
]
